--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,6 @@
 					<div id="carousel-and-nav">
 					    <div class="jcarousel">
 					    	<ul>
-
 						        <li>
 
 						        	<img src="{{ STATIC_URL }}images/main2_new.jpg">
@@ -93,27 +92,49 @@
 					    </div>
 						<div  id="about-content">
 				
-							<p>
-								</br> The Korean Undergraduate Student Association of the Vanderbilt University consists of students whose goal is to promote the education and enrichment of its members and the university community with aspects of the Korean culture. The club and its activities are open to any and all who are interested in the Korean-American community and Korean culture. </br></br>
+				 			<p>
+								</br> The Korean Undergraduate Student Association of the Vanderbilt University consists of students whose goal is to promote awareness and appreciation of traditional and modern aspects of rich Korean culture in and outside the Vanderbilt community. The orgnanization and its various events are open to anyone who are interested in the Korean culture and its community. </br></br>
 
-								We strive to provide: </br>
-								• Sense of community at Vandy </br>
-								• Gahjok family groups </br>
+								Our activities and events include:  </br>
+								• General Body Meetings with FREE FOOD! </br> 
+								• Family groups </br>
 								• “Bae” System (Hoobae/Sunbae System) </br>
-								• Culture Show collaboration with other Korean organizations on campus </br>
-								• Social Events including Inter-KSA parties, Korean BBQ Night </br>
+								• Culture Show collaboration with other International organizations on campus </br>
+								• Social Events including Pepero Fundraising, Kimbap Making </br>
 								• Opportunities to interact with other cultural groups on campus </br>
-								• Career and internship opportunities </br>
 								• Unforgettable memories throughout your college career</br>
 								</p>
-						
-
+					
 					</div>
 				</div>
 			</div>
-			<!-- <div id="white-rectangle"></div> -->
 		</div>
 	</div>
+	</div>	
+	<div id="footer">
+				<div class="narrower-container">
+					<div id="footer-desc">
+						Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br>
+					</div>
+					<div id="toTop">
+						<a href="#"><img src="{{STATIC_URL}}photos/up.png" alt="" /></a>
+					</div>
+				</div>
+			</div>
 	</body >
+<!--
+	<footer>
+		<div class="row">
+
+         <div id="go-top"><a href="../about/"><i class="icon-up-open"><img class="prof-pic" src="{{STATIC_URL}}photos/up.png" alt="" /></i></a></div>
+         <div class="twelve columns">
+      		<ul class="copyright">
+               <li>&copy; Copyright Vanderbilt Korean Undergraduate Student Association</li>
+                
+            </ul>
+
+         </div>
+      </div>
+   </footer> <!-- Footer End-->
 </html>
 
