--- a/templates/events.html
+++ b/templates/events.html
@@ -59,15 +59,12 @@
 
   
 
-<div id="maininfo">
-			<div class="section-title">
-							<h1></br>Events</h1>
-						</div>
+
    <section id="board">
 	  <div class="row">
          <div class="twelve columns collapsed">
 
-
+  				
   			<!-- board-wrapper -->
             
 <!-- modal-01 Start -->
@@ -81,7 +78,7 @@
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><i class="icon-plus">+</i></div>
-                     		</a>
+                     		</a>	
 
                  		  </div>
           		    </div> 
@@ -129,7 +126,7 @@
 					      <center><img src="{{STATIC_URL}}photos/chocolate.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
+						      <h4>
 			                <br>President</h4>
 						      <p>
 									<b>School:</b> Wharton/Engineering (M&T)
@@ -337,80 +334,18 @@
          </div> <!-- twelve columns end -->
       
       </div> <!-- row End -->
-
+	<div id="footer">
+				<div class="narrower-container">
+					<div id="footer-desc">
+						Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br>
+					</div>
+					<div id="toTop">
+						<a href="#"><img src="{{STATIC_URL}}photos/up.png" alt="" /></a>
+					</div>
+				</div>
+			</div>
    </div> <!-- Board Section End-->
 
 </body>
 
 
-
-<!--
-</div>
-<div id="events">
-	<div class="section-container">
-		<div class="narrower-container">
-			<div class="section-title">
-				<h1> Events </h1>
-			</div>
-			<div class="section-content">
-				<table class="events-table" id="event-page-1">
-					<tr>
-						<td class="event-image">
-							<img src="{{ STATIC_URL }}images/events/freshman.jpg" >
-		    			</td>
-		    			<td class="event-desc">
-		    				<h2><strong>Freshman Welcome Party!</strong></h2>
-		    				<h4>April 11, 2015, 11 AM at Keohane Atrium</h4>
-		    				<p>
-		    					The freshmen welcome party for incoming Vandy students in Korea is almost here! It's a chance for Sunbae's of Vandy's Korean community to meet their Class of 2020 Hoobae's and vice versa. 
-								All Vanderbilt students in Korea, current and incoming, are invited for some good Samgyupsal and a social night of turnin up. <br><br>
-								Check out our <a href="https://www.facebook.com/events/1649874062003162/"> Facebook event page</a> for more information on location and hours!
-		    				</p>
-		    			</td>
-					</tr>
-		    		<tr>
-		    			
-		    			<td class="event-image">
-							<img src="{{ STATIC_URL }}images/events/chocolate.jpg" >
-		    			</td>
-		    			<td class="event-desc">
-		    				<h2><strong>KUSA White Day Chocolate Making</strong></h2>
-		    				<h4>March 15, 2016, 7:00PM at Sarratt 308</h4>
-		    				<p>
-		    					Come celebrate White Day 2016 with KUSA by making your own chocolates!
-								The tradition:
-								In Korea, White Day is considered to be the counterpart of Valentine's Day. On Valentine's Day, women typically gift homemade chocolates to men as a sign of love or friendship. One month later on March 14th, the reverse happens - men present gifts to the women in their lives. 
-
-								KUSA will be providing various fruits, chocolates and toppings for you to make some treats for yourself, friends and loved ones. Stop by for a sweet treat as we all get back into school-mode!Visit our <a href="https://www.facebook.com/events/1075872145768031/">Facebook event page</a> for more details and information!
-		    				</p>
-		    			</td>
-		    		</tr>
-		    	</table>
-		 -->
-				<!-- Pagination 
-		    	<ul class="pagination" id="event-pagination">
-				  	<!-- <li class="disabled" id="prev-photo-page">  <a href="#">&laquo;</a> </li> 
-				  	<li class="active" id="event-page-1"> 	 	<a href="#">1 </a>		</li>
-				  	<!--
-				  	<li id="event-page-2">					 	<a href="#">2 </a>		</li>
-				  	<li id="event-page-3">					 	<a href="#">3 </a>		</li>
-				  	<li id="event-page-4">					 	<a href="#">4 </a>		</li>
-				  	<li id="event-page-5">					 	<a href="#">5 </a>		</li>
-					<li id="next-photo-page">					<a href="#">&raquo;</a> </li> 
-				</ul>
-			</div>
-				<div class="section-container">
-					<div class="narrower-container">
-						<div class="section-title">
-							<h1> Calendar </h1>
-						</div>
-						<div class="section-content">
-							<iframe src="https://www.google.com/calendar/embed?title=KUSA%20Events&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=kusa.dukeu%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
-						</div>
-					</div>
-				</div>
-		</div>
-	</div>
-	
-</div>
--->
