--- a/templates/comment.html
+++ b/templates/comment.html
@@ -57,9 +57,11 @@
     border:1px solid green;
     color: white;
   }
+
   </style>
 <!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
- <link rel="stylesheet" margin-left="100px" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <div id="HCB_comment_box" margin-left:"100px"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
+
+ <link rel="stylesheet" margin: "auto" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24iU%2FEvlf%2FcIYjkU5r0g.3a1"+"&opts=16862&num=10&ts=1469682012406");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <!-- end www.htmlcommentbox.com -->
