--- a/templates/comment.html
+++ b/templates/comment.html
@@ -60,8 +60,26 @@
 
   </style>
 <!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box" margin-left:"100px"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
+ <div id="container">
+  <div class="section-container">
+        <div class="narrower-container">
+ <div id="HCB_comment_box" margin:"100px"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
 
  <link rel="stylesheet" margin: "auto" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24iU%2FEvlf%2FcIYjkU5r0g.3a1"+"&opts=16862&num=10&ts=1469682012406");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24iU%2FEvlf%2FcIYjkU5r0g.3a1"+"&opts=16862&num=10&ts=1469682012406");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+</div>
+</div>
+</div>
+
+  <div id="footer">
+        <div class="narrower-container">
+          <div id="footer-desc">
+            <p>Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br></p>
+          </div>
+          <div id="toTop">
+            <a href="#"><img src="{{STATIC_URL}}photos/upicon.png" alt="" /></a>
+          </div>
+        </div>
+      </div>
+
 <!-- end www.htmlcommentbox.com -->
