--- a/templates/events.html
+++ b/templates/events.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Vanderbilt KUSA: Vanderbilt University Korean Undergraduate Student Association</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style_events.css" />  
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL}}css/style_events.css" />  
 
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/magnific-popup.css" />                
            
@@ -334,18 +334,20 @@
          </div> <!-- twelve columns end -->
       
       </div> <!-- row End -->
+
+   </div> <!-- Board Section End-->
+</section>
 	<div id="footer">
 				<div class="narrower-container">
 					<div id="footer-desc">
-						Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br>
+						<p>Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br></p>
 					</div>
 					<div id="toTop">
-						<a href="#"><img src="{{STATIC_URL}}photos/up.png" alt="" /></a>
+						<a href="#"><img src="{{STATIC_URL}}photos/upicon.png" alt="" /></a>
 					</div>
 				</div>
 			</div>
-   </div> <!-- Board Section End-->
-
+	
 </body>
 
 
