--- a/templates/exec.html
+++ b/templates/exec.html
@@ -56,15 +56,9 @@
 		     	</nav>
 		</header>		
 
-<div id="container">
-						<div class="section-title">		
-					    	<h3>meet our 2016-2017 KUSA board members</h3>
-					    </div>
-</div>
    <section id="board">
 	  <div class="row">
          <div class="twelve columns collapsed">
-
 
   			<!-- board-wrapper -->
             <div id="board-wrapper" class="bgrid-quarters -bgrid-thirds cf">
@@ -91,7 +85,7 @@
 					      <center><img src="{{STATIC_URL}}photos/doohee.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
+						      <h4>Doohee
 			                <br>President</h4>
 						      <p>
 									<b>School:</b> College of Arts & Sciences 
@@ -475,8 +469,23 @@
 
    </section> <!-- Board Section End-->
 
+	<div id="footer">
+				<div class="narrower-container">
+					<div id="footer-desc">
+						<p>Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br></p>
+					</div>
+					<div id="toTop">
+						<a href="#"><img src="{{STATIC_URL}}photos/upicon.png" alt="" /></a>
+					</div>
+				</div>
+			</div>
 
-	</body>
+   <!-- Java Script
+   ================================================== -->
+
+   <script src="js/magnific-popup.js"></script>
+	
+</body>
 
 
 
