--- a/KUSAapp/static/css/style_contact.css
+++ b/KUSAapp/static/css/style_contact.css
@@ -236,6 +236,36 @@ header .scrolldown a {
    transition: all .3s ease-in-out;
 }
 
+
+/* Footer */
+#footer {
+	height:100px;
+	width:100%;
+	background-color:#575757;
+	font-size:15px;
+	font-color: white;
+}
+#footer-desc {
+	float:left;
+	margin-top:10px;
+	display:inline-block;
+}
+#footer-desc p {
+	color: white;
+	font-size: 15px;
+}
+#toTop {
+	/*height: 20px;
+	width: 20px;*/
+	margin-top:10px;
+	float:right;
+	display:inline-block;
+	font-size:20px;
+}
+#toTop a {
+	text-decoration: none;
+}
+
 /* primary navigation
 --------------------------------------------------------------------- */
 #nav-wrap ul, #nav-wrap li, #nav-wrap a {
@@ -825,31 +855,6 @@ ul#nav li.current a { color: #F06000; }
   border-radius: 5px;
 }
 
-
-/* Footer */
-#footer {
-	height:120px;
-	width:100%;
-	background-image: url("../images/grey_wash_wall.png");
-	font-size:16px;
-}
-#footer-desc {
-	float:left;
-	color:lightgrey;
-	margin-top:10px;
-	display:inline-block;
-}
-#toTop {
-	/*height: 20px;
-	width: 20px;*/
-	margin-top:10px;
-	float:right;
-	display:inline-block;
-	font-size:20px;
-}
-#toTop a {
-	text-decoration: none;
-}
 
 
 div.wpcf7 {
