--- a/KUSAapp/static/css/style_events.css
+++ b/KUSAapp/static/css/style_events.css
@@ -49,7 +49,7 @@ h3{
 
 }
 
-}
+
 b {
  display: inline-block;
   padding: 10px 15px;
@@ -251,30 +251,7 @@ properly.
   	text-align: center;
 
 }
-/* Footer */
-#footer {
-  height:100px;
-  width:100%;
-  background-image: url("../images/grey_wash_wall.png");
-  font-size:20px;
-}
-#footer-desc {
-  float:left;
-  background:#303030;
-  margin-top:10px;
-  display:inline-block;
-}
-#toTop {
-  /*height: 20px;
-  width: 20px;*/
-  margin-top:10px;
-  float:right;
-  display:inline-block;
-  font-size:20px;
-}
-#toTop a {
-  text-decoration: none;
-}
+
 
 /* Header */
 
@@ -375,6 +352,34 @@ header .scrolldown a {
    transition: all .3s ease-in-out;
 }
 
+/* Footer */
+#footer {
+  height:100px;
+  width:100%;
+  background-color:#575757;
+  font-size:15px;
+  font-color: white;
+}
+#footer-desc {
+  float:left;
+  margin-top:10px;
+  display:inline-block;
+}
+#footer-desc p {
+  color: white;
+  font-size: 15px;
+}
+#toTop {
+  /*height: 20px;
+  width: 20px;*/
+  margin-top:10px;
+  float:right;
+  display:inline-block;
+  font-size:20px;
+}
+#toTop a {
+  text-decoration: none;
+}
 
 
 /* primary navigation
@@ -488,7 +493,7 @@ properly.
 #board {
    background: #ebeeee;
    padding-top: 90px;
-  padding-bottom: 60px;
+  padding-bottom: 90px;
 
  
 }
