--- a/templates/base.html
+++ b/templates/base.html
@@ -114,10 +114,10 @@
 	<div id="footer">
 				<div class="narrower-container">
 					<div id="footer-desc">
-						Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br>
+						<p>Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br></p>
 					</div>
 					<div id="toTop">
-						<a href="#"><img src="{{STATIC_URL}}photos/up.png" alt="" /></a>
+						<a href="#"><img src="{{STATIC_URL}}photos/upicon.png" alt="" /></a>
 					</div>
 				</div>
 			</div>
