--- a/templates/photos.html
+++ b/templates/photos.html
@@ -202,8 +202,7 @@
 		               <div class="twelve columns">
 
 
-
-<iframe scrolling="no" marginheight="0" frameborder="0" width="1000px"  style="height: 502px;" src="http://facebookgalleria.com/gallery.php?id=1072855889439076&exclude=1072855889439076&display=album&rows=4&margin=10&cols=3&width=300&font_size=11&title_color=000000&hide_next_back=0&shape=rectangle&frame=1&token=8c03899a-53c0-11e6-acb3-f8ce1e2c8413"></iframe>
+<iframe scrolling="no" marginheight="0" frameborder="0" width="1000px" style="height: 1000px;" src="http://facebookgalleria.com/gallery.php?id=304824979863619&display=album&rows=4&margin=10&cols=3&width=300&font_size=11&title_color=000&hide_next_back=0&share_buttons=0&shape=rectangle&frame=1"></iframe>
  </div>
 
             </div> <!-- item end -->
