--- a/templates/comment.html
+++ b/templates/comment.html
@@ -16,7 +16,7 @@
 
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
-		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
+		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta property="og:url" content="http://vanderbiltkusa.herokuapp.com"/> 
 		<meta property="og:title" content="Vanderbilt KUSA"/>
