--- a/templates/photos.html
+++ b/templates/photos.html
@@ -32,7 +32,7 @@
 		</script>
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
-		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
+		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta property="og:url" content="http://vanderbiltkusa.herokuapp.com"/> 
 		<meta property="og:title" content="Vanderbilt KUSA"/>
@@ -202,8 +202,8 @@
 		               <div class="twelve columns">
 
 
-<iframe scrolling="no" marginheight="0" frameborder="0" width="1000px" style="height: 1000px;" src="http://facebookgalleria.com/gallery.php?id=304824979863619&display=album&rows=4&margin=10&cols=3&width=300&font_size=11&title_color=000&hide_next_back=0&share_buttons=0&shape=rectangle&frame=1"></iframe>
- </div>
+			<iframe scrolling="no" marginheight="0" frameborder="0" width="1000px" style="height: 1000px;" src="http://facebookgalleria.com/gallery.php?id=304824979863619&display=album&rows=4&margin=10&cols=3&width=300&font_size=11&title_color=000&hide_next_back=0&share_buttons=0&shape=rectangle&frame=1"></iframe>
+			 </div>
 
             </div> <!-- item end -->
 
