--- a/templates/index1.html
+++ b/templates/index1.html
@@ -22,7 +22,9 @@
 		  ga('create', 'UA-61754400-1', 'auto');
 		  ga('send', 'pageview');
 		</script>
-        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
+	           <!-- Favicons
+		================================================== -->
+		<link rel="shortcut icon" href="{ STATIC_URL }}images/111.png" >
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
