--- a/templates/index1.html
+++ b/templates/index1.html
@@ -24,8 +24,7 @@
 		</script>
 	           <!-- Favicons
 		================================================== -->
-		<link rel="shortcut icon" href="{ STATIC_URL }}images/111.png" >
-		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
+		<link rel="shortcut icon" href="{ STATIC_URL }}images/111.jpg" >
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta property="og:url" content="http://vanderbiltkusa.herokuapp.com"/> 
