--- a/templates/events.html
+++ b/templates/events.html
@@ -343,7 +343,7 @@
 						<p>Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br></p>
 					</div>
 					<div id="toTop">
-						<a href="#"><img src="{{STATIC_URL}}photos/upicon.png" alt="" /></a>
+						<a href="#"><img src="{{STATIC_URL}}photos/up.png" alt="" /></a>
 					</div>
 				</div>
 			</div>
