--- a/templates/index1.html
+++ b/templates/index1.html
@@ -66,39 +66,10 @@
       	     </div>		
 
 				
-   </header> <!-- Header End ->
+   </header> 
 
-
-
-			<!-- top bar/logo/nav 
-			<div id="header_base">
-				<a href="http://www.vanderdiltkua.herokuapp.com" class="navbar-brand"><img src="{{ STATIC_URL }}images/KUSA_logo.jpg" alt="Vanderbilt KUSA"></a>
-			</div>s
-			-->
 
 </body>
-					<!--
-				<ul id="parallax_move">
-					<li class="layer layer1" data-depth="0.10" style="background-image: url(http://www.columbiaksa.com/wp-content/uploads/2016/01/12140016_916570225079013_7365797505371344030_o-1.jpg);">
-					</li>
-				</ul>
-			-->
-	<!--
-	<div class="home-header-wrap">
-		<ul id="parallax_move">
-			<li class="layer layer1" data-depth="0.10" style="background-image: url(http://www.columbiaksa.com/wp-content/uploads/2016/01/12140016_916570225079013_7365797505371344030_o-1.jpg);"></li>
-		</ul>
-		<div class="header-content-wrap">
-			<div class="container big-title-container">
-				<h1 class="intro-text">Welcome to Columbia Korean Students Association</h1>
-				<div class="buttons">	
-					<a href="https://www.facebook.com/ColumbiaKSA/" class="btn btn-primary custom-button red-btn">visit our facebook page</a>
-					<a href="http://www.columbiaksa.com/about/" class="btn btn-primary custom-button green-btn">learn more</a>
-				</div>
-			</div>
-		</div> .header-content-wrap 
-		<div class="clear"></div>
-	</div>
--->
+
 
 </html>
