--- a/templates/comment.html
+++ b/templates/comment.html
@@ -14,8 +14,7 @@
         <script type="text/javascript" src="{{ STATIC_URL }}galleria/galleria-1.2.9.min.js"></script>
         <!-- for google analytics -->
 
-        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ STATIC_URL }}images/111.png" >
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta property="og:url" content="http://vanderbiltkusa.herokuapp.com"/> 
@@ -77,7 +76,7 @@
             <p>Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. <br></p>
           </div>
           <div id="toTop">
-            <a href="#"><img src="{{STATIC_URL}}photos/upicon.png" alt="" /></a>
+            <a href="#"><img src="{{STATIC_URL}}photos/up.png" alt="" /></a>
           </div>
         </div>
       </div>
