--- a/templates/exec.html
+++ b/templates/exec.html
@@ -30,14 +30,13 @@
 		  ga('create', 'UA-61754400-1', 'auto');
 		  ga('send', 'pageview');
 		</script>
-        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
+ 		<link rel="shortcut icon" href="{{ STATIC_URL }}images/111.png" >
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta property="og:url" content="http://vanderbiltkusa.herokuapp.com"/> 
 		<meta property="og:title" content="Vanderbilt KUSA"/>
 		<meta property="og:description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture."/> 
-		<meta property="og:image" content="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/269344_407788769304987_1034310108_n.jpg?oh=bc0153f689b5e37d0bc92fb53c679ef7&oe=5461ED7E&__gda__=1416801199_5d173725c2f92c3bb524a8b5bb41ccfa"/> 
+
 	</head>
 
 	<body>
@@ -67,11 +66,11 @@
 		          	   <div class="columns board-item">
 		                  <div class="item-wrap">
  							<a href="#modal-01" title="">
-	                    		 <center><img alt="" src="{{STATIC_URL}}photos/doohee.jpg" ></center>
+	                    		 <center><img src="{{STATIC_URL}}photos/doohee.jpg" alt=""  ></center>
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Doohee Lee</h5>
-			                             	     <p>President</p>
+			                             	     <h4>President</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><i class="icon-plus">+</i></div>
@@ -112,7 +111,7 @@
 						                        <div class="overlay">
 						                           <div class="board-item-meta">
 						          					      <h5>Jeffrey Dohan Kim</h5>
-						                              <p>Vice President</p>
+						                              <h4>Vice President</h4>
 						          					   </div>
 						                        </div>
 						                        <div class="link-icon"><i class="icon-plus">+</i></div>
@@ -149,7 +148,7 @@
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Choongwon Jin</h5>
-			                             	     <p>Treasurer</p>
+			                             	     <h4>Treasurer</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><i class="icon-plus">+</i></div>
@@ -192,7 +191,7 @@
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Crystal Kim</h5>
-			                             	     <p>Secretary</p>
+			                             	     <h4>Secretary</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><i class="icon-plus">+</i></div>
@@ -229,7 +228,7 @@
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Jun Lee</h5>
-			                             	     <p>Special Events</p>
+			                             	     <h4>Special Events</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><i class="icon-plus">+</i></div>
@@ -268,7 +267,7 @@
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Lois You</h5>
-			                             	     <p>Study Abroad</p>
+			                             	     <h4>Study Abroad</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><i class="icon-plus">+</i></div>
@@ -307,7 +306,7 @@
 			                        	<div class="overlay"> 
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Soeun Ahn</h5>
-			                             	     <p>Language Chair</p>
+			                             	     <h4>Language Chair</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><h5 class="icon-plus">+</h5></div>
@@ -346,7 +345,7 @@
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Wooseong Choi</h5>
-			                             	     <p>Special Events</p>
+			                             	     <h4>Special Events</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><h5 class="icon-plus">+</h5></div>
@@ -387,7 +386,7 @@
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Sean Ha</h5>
-			                             	     <p>Publicity</p>
+			                             	     <h4>Publicity</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><h5 class="icon-plus">+</h5></div>
@@ -428,7 +427,7 @@
 			                        	<div class="overlay">
 			                         		  <div class="board-item-meta">
 			          					     	 <h5>Joey Yoon</h5>
-			                             	     <p>GBM Planner</p>
+			                             	     <h4>GBM Planner</h4>
 			          					       </div>
 			                            </div>
 	                       		 <div class="link-icon"><h5 class="icon-plus">+</h5></div>
@@ -480,11 +479,6 @@
 				</div>
 			</div>
 
-   <!-- Java Script
-   ================================================== -->
-
-   <script src="js/magnific-popup.js"></script>
-	
 </body>
 
 
