--- a/templates/events.html
+++ b/templates/events.html
@@ -30,14 +30,13 @@
 		  ga('create', 'UA-61754400-1', 'auto');
 		  ga('send', 'pageview');
 		</script>
-        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
+		<link rel="shortcut icon" href="{{ STATIC_URL }}images/111.png" >
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta property="og:url" content="http://vanderbiltkusa.herokuapp.com"/> 
 		<meta property="og:title" content="Vanderbilt KUSA"/>
 		<meta property="og:description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture."/> 
-		<meta property="og:image" content="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/269344_407788769304987_1034310108_n.jpg?oh=bc0153f689b5e37d0bc92fb53c679ef7&oe=5461ED7E&__gda__=1416801199_5d173725c2f92c3bb524a8b5bb41ccfa"/> 
+	
 
 	</head>
 
@@ -88,14 +87,7 @@
 					      <center><img src="{{STATIC_URL}}photos/freshman.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
-			                <br>President</h4>
-						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
-									<br><b>Graduating Year:</b> 2017
-									 </p>
-
+					
 			            <div class="link-box">
 					         <a class="popup-modal-dismiss">Close</a>
 			            </div>
@@ -126,13 +118,7 @@
 					      <center><img src="{{STATIC_URL}}photos/chocolate.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>
-			                <br>President</h4>
-						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
-									<br><b>Graduating Year:</b> 2017
-									 </p>
+						  
 
 			            <div class="link-box">
 					         <a class="popup-modal-dismiss">Close</a>
@@ -163,14 +149,7 @@
 					      <center><img src="{{STATIC_URL}}photos/gbm.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
-			                <br>President</h4>
-						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
-									<br><b>Graduating Year:</b> 2017
-									 </p>
-
+						
 			            <div class="link-box">
 					         <a class="popup-modal-dismiss">Close</a>
 			            </div>
@@ -200,13 +179,7 @@
 					      <center><img src="{{STATIC_URL}}photos/tale.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
-			                <br>President</h4>
-						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
-									<br><b>Graduating Year:</b> 2017
-									 </p>
+						   
 
 			            <div class="link-box">
 					         <a class="popup-modal-dismiss">Close</a>
@@ -237,13 +210,7 @@
 					      <center><img src="{{STATIC_URL}}photos/link.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
-			                <br>President</h4>
-						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
-									<br><b>Graduating Year:</b> 2017
-									 </p>
+						   
 
 			            <div class="link-box">
 					         <a class="popup-modal-dismiss">Close</a>
@@ -274,14 +241,7 @@
 					      <center><img src="{{STATIC_URL}}photos/pepero.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
-			                <br>President</h4>
-						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
-									<br><b>Graduating Year:</b> 2017
-									 </p>
-
+						
 			            <div class="link-box">
 					         <a class="popup-modal-dismiss">Close</a>
 			            </div>
@@ -310,14 +270,7 @@
 					      <center><img src="{{STATIC_URL}}photos/lunar.jpg" alt="" width="462" height="462" class="scale-with-grid" /></center>
 
 					      <div class="description-box">
-						      <h4>Scott Lee
-			                <br>President</h4>
-						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
-									<br><b>Graduating Year:</b> 2017
-									 </p>
-
+						      
 			            <div class="link-box">
 					         <a class="popup-modal-dismiss">Close</a>
 			            </div>
