--- a/templates/index1.html
+++ b/templates/index1.html
@@ -59,7 +59,7 @@
 			           	     <form action="about/" method="post">{% csrf_token %}
 								<tr>
 							    	
-							    	<td><input style="width: 150x; padding: 15px; box-shaddow: 6px 6px 5px;  #D4AF37; font-weight: bolder; background:  #D4AF37; color: white; cursor: pointer; border-radius: 10px; border: 0px solid #D9D9D9; font-size: 110%; "type="submit" value="VISIT OUR FACEBOOK PAGE" id="form-submit"></td>
+							    	<td><input style="width: 150x; padding: 15px; box-shaddow: 6px 6px 5px;  #D4AF37; font-weight: bolder; background:  #D4AF37; color: white; cursor: pointer; border-radius: 10px; border: 0px solid #D9D9D9; font-size: 110%; "type="submit" value="LEARN MORE ABOUT US" id="form-submit"></td>
 							    </tr>	
 							</form>
       	     </div>		
